fix spacing on masthead title

--- a/src/components/Masthead/styles.module.scss
+++ b/src/components/Masthead/styles.module.scss
@@ -12,7 +12,7 @@
 		font-family:Gin;
 	}
 	.callout {
-		display:flex; justify-content:center; align-items:center; line-height:1; white-space:nowrap;
+		display:flex; justify-content:center; align-items:center; line-height:1; white-space:nowrap; margin-top:.75em;
 		img {
 			display:block; max-height:42px; width:auto; margin-right:8px;
 		}
